// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render and create organization 1`] = `
<Fragment>
  <OrganizationDetailsStep
    finished={false}
    onContinue={[Function]}
    onOpen={[Function]}
    open={true}
    submitText="continue"
  />
  <PlanStep
    createOrganization={[Function]}
    deleteOrganization={[Function]}
    onFreePlanChoose={[Function]}
    onPaidPlanChoose={[Function]}
    open={false}
    startingPrice="billing.price_format.10"
    subscriptionPlans={
      Array [
        Object {
          "maxNcloc": 100000,
          "price": 10,
        },
        Object {
          "maxNcloc": 250000,
          "price": 75,
        },
      ]
    }
  />
</Fragment>
`;

exports[`should render and create organization 2`] = `
<Fragment>
  <OrganizationDetailsStep
    finished={true}
    onContinue={[Function]}
    onOpen={[Function]}
    open={false}
    organization={
      Object {
        "avatar": "http://example.com/avatar",
        "description": "description-foo",
        "key": "key-foo",
        "name": "name-foo",
        "url": "http://example.com/foo",
      }
    }
    submitText="continue"
  />
  <PlanStep
    createOrganization={[Function]}
    deleteOrganization={[Function]}
    onFreePlanChoose={[Function]}
    onPaidPlanChoose={[Function]}
    open={true}
    startingPrice="billing.price_format.10"
    subscriptionPlans={
      Array [
        Object {
          "maxNcloc": 100000,
          "price": 10,
        },
        Object {
          "maxNcloc": 250000,
          "price": 75,
        },
      ]
    }
  />
</Fragment>
`;
